whitespace fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -317,6 +317,8 @@ body {
   line-height: 100px;
   color: white;
   font-weight: bold;
+  padding: 0;
+  margin: 0;
 }
 
 .not-fun-facts h3 {
